Prelimary Fix for #2211:add expand/collapse all to sections of dottydoc

--- a/doc-tool/resources/css/api-page.css
+++ b/doc-tool/resources/css/api-page.css
@@ -66,6 +66,23 @@ h1.section {
     margin: 30px 0;
 }
 
+h1.section > span.expand-button {
+    color: rgba(167, 161, 161, 0.5);
+    font-family: "Source Code Pro", sans-serif;
+    font-size: 25px;
+}
+
+h1.section > span.expand-button:hover {
+    color: rgb(167, 161, 161);
+    cursor: pointer;
+    user-select: none;
+}
+
+h1.section > span.expand-button.invisible,
+h1.section > span.expand-button.invisible:hover {
+    color: transparent;
+}
+
 .empty {
     display: none;
 }
@@ -141,4 +158,8 @@ div.entity-section > div.member > div.member-body > div.member-body-long {
 
 div.entity-section > div.member > div.member-body > div.member-body-long.toggled {
     display: block;
+}
+
+div.entity-section.toggled{
+    display: none;
 }
